# wid_2022_oceanhub_cognite

./: .gitignore  README.md  pyproject.toml
coral_bleaching/: classification.ipynb  classification_v1.ipynb  easy_viz.ipynb  hard_coral.ipynb  latest_bleaching_data_small.csv
timeseries_classification/: timeseries_classification.ipynb
timeseries_classification/training_data/: 11-Copy1.175000190734863_-60.57500076293945 (1).csv  11-Copy1.225000381469727_-60.775001525878906.csv  11-Copy1.225000381469727_-60.82500076293945.csv  11-Copy1.274999618530273_-60.474998474121094.csv  11-Copy1.274999618530273_-60.525001525878906.csv  11-Copy1.274999618530273_-60.67499923706055.csv  11-Copy1.324999809265137_-60.474998474121094.csv  11-Copy1.324999809265137_-60.625.csv  11-Copy1.375_-60.474998474121094.csv  11-Copy1.375_-60.525001525878906.csv  11-Copy1.425000190734863_-60.525001525878906.csv  11-Copy2.175000190734863_-60.775001525878906.csv  11-Copy2.225000381469727_-60.57500076293945.csv  11-Copy2.274999618530273_-60.625.csv  11-Copy2.274999618530273_-60.724998474121094.csv  11-Copy2.324999809265137_-60.525001525878906.csv  11-Copy2.324999809265137_-60.57500076293945.csv  11-Copy2.324999809265137_-60.67499923706055.csv  11.125_-60.775001525878906.csv  11.125_-60.82500076293945.csv  11.175000190734863_-60.625.csv  11.175000190734863_-60.67499923706055.csv  11.175000190734863_-60.724998474121094.csv  11.175000190734863_-60.82500076293945.csv  11.175000190734863_-60.875.csv  11.175000190734863_-60.92499923706055.csv  11.225000381469727_-60.724998474121094.csv  (+564 more)
(+1 files in other folders)
